CoreFoundation: Fix bugs related to XML Namespace.

`struct _xmlNode` has two members related to namespace: `ns` and `nsDef`. CoreFoundation (perhaps incorrectly) uses `ns` instead of `nsDef` and that causes some bugs such as [SR-10921](https://bugs.swift.org/browse/SR-10921). This commit fixes the issue.